Fixing Issues declared by sonarqube so we get a better maintainable project